--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
             <h3>
               Dapatkan inspirasi, bangun relasi antar seniman hebat Indonesia.
             </h3>
-            <a class="createButton" href="#">Buat akun</a>
+            <a class="createButton" href="/pages/gabung.html">Buat akun</a>
           </div>
         </div>
       </div>
